--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,3 @@
-# This is the official list of YAPF authors for copyright purposes.
-# This file is distinct from the CONTRIBUTORS files.
-# See the latter for an explanation.
-
-# Names should be added to this file as:
-# Name or Organization <email address>
-# The email address is not required for organizations.
-
-Google Inc.
+version https://git-lfs.github.com/spec/v1
+oid sha256:1a3591f17972f8397d56b2aecd32cebd1a026cc372dbbf03c4ad92b9df4b702c
+size 307
